--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <h1>Основной контент</h1>
     </main>
 
+    <footer class="footer">
+        <h1>ПОДВАЛ</h1>
+    </footer>
+
 </body>
 
 </html>
