--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
     <header class="header">
-        <h1>ШААПКА</h1>
+        <h1>ШАПКА</h1>
     </header>
     <main class="main">
         <h1>Основной контент</h1>
@@ -22,5 +22,5 @@
     </footer>
 
 </body>
-
+    <script src="js/main.js"></script>
 </html>
